# vibecodeallinone

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  MASTER_PLAN.md  NEXT_SESSION_PROMPT.md  PROJECT_AUDIT.md  RALPH_LOOP_PROMPT.md  README.md  SECURITY.md  SESSION_OPERATIONS.md  UPGRADE-REVIEW-PROMPT.md  package.json  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  ralph-gates.yml
apps/assistant-web/: README.md  app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
docs/: REVIEW_PROMPT.md  REVIEW_PROMPT_ROUND1_S30.md  REVIEW_PROMPT_ROUND2_S30.md  REVIEW_PROMPT_ROUND3.md  REVIEW_PROMPT_ROUND3_S30.md
docs/landing/: index.html
docs/session-ops/: 00_MASTER_PLAN.md  01_SESSION_BOARD.md  (+21 more)
hooks/: kg-auto-judge.py  kg-bulk-indexer.py  kg-feedback-collector.py  kg-incremental-indexer.py  kg-precheck.py  kg-survival-checker.py  mcp-kg-auto-trigger.py  post-mcp-kg.py
kg-mcp-server/: API.md  config.py  requirements.txt  server.py
scripts/: install.sh  validate.sh
tests/: conftest.py  test_assistant_api_runtime.py  test_assistant_api_telegram.py  test_assistant_api_worker.py  test_assistant_operator_contract.py  test_assistant_operator_live_validation.py  test_config.py  test_embedding_pipeline.py  test_forbidden_scan.py  test_install_smoke.sh  test_ralphloop_artifact_io.py  test_ralphloop_trust_bundle.py  test_server_core.py  test_skill_frontmatter.py  test_write_back.py
(+231 files in other folders)
