[project]
name = "claude-code-power-pack"
version = "2.0.0"
description = "12 AI skills + Knowledge Graph MCP server for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "elon-opensource" }]
keywords = [
    "claude-code", "agent-skills", "clean-code", "vibe-coding",
    "knowledge-graph", "neo4j", "mcp-server", "code-quality",
]

[project.urls]
Homepage = "https://github.com/elon-choo/vibecodeallinone"
Repository = "https://github.com/elon-choo/vibecodeallinone"
Changelog = "https://github.com/elon-choo/vibecodeallinone/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
